syntax = "proto3";

package com.ppdai.framework.raptor.codegen.proto;
service Simple {
    rpc sayHello (HelloRequest) returns (HelloReply) {
    }
}
service AnotherSimple {
    rpc sayHello (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
    message abc{
        string ab =1 ;
    }
}

message HelloReply {
    string message = 1;
}
