syntax = "proto3";

package com.ppdai.framework.raptor.exception;

message ErrorMessage {
    int32 code = 1;
    string message = 2;
    map<string, string> attachments = 3;
}